---------------------------------------------------------------------------------------------------
Version: 2.5.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.5.2
Date: 2025-01-15
  Changes:
    - Make deselection of the "saved" entity configurable (suggested by @Magnus.Ertel on the mod discussion forum)
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2025-01-13
  Changes:
    - add russian locale (thanks @dodther on github!)
    - raise 'script_raised_teleport' if a regular entity is moved. (suggested by @heinwessels on github)
    - deselect the "saved" entity whenever another entity is touched by the player
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2024-12-14
  Changes:
    - add "transporter mode" that allows moving of belts and loaders
    - allow ghost moving in cheat mode (suggest on mod discussions)
    - only do rocket check if trying to move a rocket silo (reported on mod discussions by @kuxynator)
---------------------------------------------------------------------------------------------------
Version: 2.4.3
Date: 2024-11-30
  Changes:
    - add more specific collision checks to allow entities that "hide" invisible entities
      to move
---------------------------------------------------------------------------------------------------
Version: 2.4.2
Date: 2024-11-26
  Changes:
    - debugging now shows both current and future position
    - support rotating oblong entities with other sizes than 2x1
  Bugfixes:
    - adding a new entity to the "know entities" list would not update the internal storage
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2024-11-22
  Changes:
    - Fix missing error message if entities could not be moved at all