@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - When rotating an entity and then picking up a blueprint from the blueprint library and rotating it, the entity kept rotating. Reported by @Nightmare_Sky on the forums.
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.2
 Date: 2025-01-15
